<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f3f3f3"
    tools:context=".MainActivity">
    <!--顶部栏-->
    <RelativeLayout
        android:id="@+id/main_top_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/main_top_ic_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/searchDescription"
            android:src="@mipmap/search"
            android:layout_alignParentEnd="true"
            android:padding="10dp" />
    </RelativeLayout>
    <!--内容展示区-->
    <ListView
        android:id="@+id/main_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_top_layout"
        android:padding="10dp"
        android:divider="@null"
        android:dividerHeight="6dp"
        android:scrollbars="none"
        android:background="@color/grey_f3f3f3" />
    <!--更多图标-->
    <ImageButton
        android:id="@+id/main_btn_more"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/moreDescription"
        android:src="@mipmap/more"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@drawable/main_more_bg" />
    <!--记一笔按钮-->
    <Button
        android:id="@+id/main_btn_edit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/main_btn_more"
        android:layout_toStartOf="@id/main_btn_more"
        android:background="@drawable/main_edit_bg"
        android:text="@string/edit_one"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:drawableStart="@mipmap/edit"
        android:gravity="center_vertical" />
</RelativeLayout>